--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -1,3 +1,36 @@
 .popup {
-    background: pink;
+    position: fixed;
+    z-index: 999;
+    border: 1px #ccc solid;
+}
+
+.popup-title {
+    height: 60px;
+    background: #f5f5f5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popup-title h3 {
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.popup-title i {
+    margin-right: 20px;
+    font-size: 18px;
+}
+
+.popup-content {
+    height: calc(100% - 60px);
+    background: white;
+}
+
+.mask {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 888;
+    background: rgba(0, 0, 0, .5);
 }
