--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -28,7 +28,7 @@
 .video-progress-now {
     position: absolute;
     left: 0;
-    width: 50%;
+    width: 0;
     height: 100%;
     background: #ff6700;
     z-index: 1;
@@ -37,7 +37,7 @@
 .video-progress-suc {
     position: absolute;
     left: 0;
-    width: 70%;
+    width: 0;
     height: 100%;
     background: #666666;
 }
@@ -117,7 +117,7 @@
 }
 
 .video-volprogress-now {
-    width: 50%;
+    width: 0%;
     height: 100%;
     background: #ff6700;
     z-index: 1;
