--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -11,11 +11,12 @@
 
 .video-controls {
     position: absolute;
-    bottom: 0;
+    bottom: -50px;
     left: 0;
     width: 100%;
     height: 50px;
     background: rgba(0, 0, 0, .8);
+    transition: .5s;
 }
 
 .video-progress {
